---
source: crates/dbt-jinja/minijinja/tests/test_parser.rs
description: "{{ \"foo\" }}\n{{ \"foo\" \"bar\" }}\n{{ \"foo\" \"bar\" \"baz\" }}"
input_file: crates/dbt-jinja/minijinja/tests/parser-inputs/string-implicit-concat.txt
---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: Const {
                    value: 'foo',
                } @ 1:1-1:12,
            } @ 1:1-1:12,
            EmitRaw {
                raw: "\n",
            } @ 1:12-2:1,
            EmitExpr {
                expr: Const {
                    value: 'foobar',
                } @ 2:1-2:18,
            } @ 2:1-2:18,
            EmitRaw {
                raw: "\n",
            } @ 2:18-3:1,
            EmitExpr {
                expr: Const {
                    value: 'foobarbaz',
                } @ 3:1-3:24,
            } @ 3:1-3:24,
        ],
    } @ 0:0-3:24,
)
